tower/archlinux/installer/towerospi-iptables.rules
# Generated by iptables-save v1.8.9 on Sun Apr  2 19:38:04 2023
*mangle
:PREROUTING ACCEPT [12:624]
:INPUT ACCEPT [12:624]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [12:2064]
:POSTROUTING ACCEPT [12:2064]
-A PREROUTING -m rpfilter --invert -j DROP
COMMIT
# Completed on Sun Apr  2 19:38:04 2023
# Generated by iptables-save v1.8.9 on Sun Apr  2 19:38:04 2023
*filter
:INPUT DROP [0:0]
:FORWARD DROP [0:0]
:OUTPUT ACCEPT [0:0]
:TCP - [0:0]
:UDP - [0:0]
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -m conntrack --ctstate INVALID -j DROP
-A INPUT -p icmp -m icmp --icmp-type 8 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -j UDP
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m conntrack --ctstate NEW -j TCP
-A INPUT -p tcp -m recent --set --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A INPUT -p udp -m recent --set --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
-A INPUT -j REJECT --reject-with icmp-proto-unreachable
-A OUTPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -d TOWER_NETWORK -j DROP
-A TCP -p tcp -m recent --update --seconds 60 --name TCP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with tcp-reset
-A TCP -s THIN_CLIENT_IP/32 -p tcp -m tcp --dport 22 -j ACCEPT
-A UDP -s THIN_CLIENT_IP/32 -i eth0 -p udp -m udp --dport 5353 -j ACCEPT
-A UDP -p udp -m recent --update --seconds 60 --name UDP-PORTSCAN --mask 255.255.255.255 --rsource -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sun Apr  2 19:38:04 2023
